--- a/src/index.css
+++ b/src/index.css
@@ -20,28 +20,102 @@ table {
 }
 
 td {
-  border: solid 1px black;
+  border: solid 1px #275b6c;
   width: 60px;
   height: 60px;
-
-  vertical-align: middle;
-  text-align: center;
-
+  padding: 0;
   cursor: pointer;
-}
 
-td .value { display: none; }
-
-td.selected {
-  background-color: #bdf78f;
+  background-color: #275b6c;
 }
 
 td.disabled {
-  background-color: #dedede;
-  cursor: disabled;
+  cursor: not-allowed;
+
+  animation-name: bounceIn;
+  animation-delay: 200ms;
+  animation-duration: 300ms;
+  animation-timing-function: linear;
+  animation-fill-mode: forwards;
 }
 
-td.selected span,
-td.disabled span {
-  display: block;
+.value {
+  width: 100%;
+  height: 100%;
+
+  font-weight: bold;
+}
+
+/* entire container, keeps perspective */
+.flip-container {
+	perspective: 1000px;
+}
+
+/* flip the pane when hovered */
+.flip-container.disabled .flipper,
+.flip-container.selected .flipper {
+	transform: rotateY(180deg);
+}
+
+.flipper, .front, .back {
+	width: 100%;
+	height: 100%;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* flip speed goes here */
+.flipper {
+	transition: 0.3s;
+	transform-style: preserve-3d;
+	position: relative;
+}
+
+/* hide back of pane during swap */
+.front, .back {
+	backface-visibility: hidden;
+
+	position: absolute;
+	top: 0;
+	left: 0;
+
+  background-color: #eff8fb;
+  color: #275b6c;
+  transition: all;
+}
+
+/* front pane, placed above back */
+.front {
+	z-index: 2;
+	/* for firefox 31 */
+	transform: rotateY(0deg);
+
+}
+
+/* back, initially hidden pane */
+.back {
+	transform: rotateY(180deg);
+}
+
+.disabled .back {
+  background-color: #d6ff73;
+  color: #31410a;
+}
+
+
+@keyframes bounceIn {
+  0%{
+    transform: scale(0.3) translate3d(0,0,0);
+  }
+  50%{
+    transform: scale(1.2);
+  }
+  80%{
+    transform: scale(0.89);
+  }
+  100%{
+    transform: scale(1) translate3d(0,0,0);
+  }
 }
